# Optimization-ML-Research

./: .gitignore  Dockerfile  LICENSE  README.md  _tmp_update.py  environment.yml  mintours.py  pygame_visual.py  pyproject.toml  quicktest.py  requirements.txt  sample.py  setup.py  temp_patch.txt
.github/workflows/: python-app.yml
benchmark/: benchmark_dp.py  benchmark_greedy.py
benchmarks/: README.md  bench_dp_full.py  bench_dpos.py  bench_gs.py  bench_gsp.py  micro_bench_small_medium.py
benchmarks_legacy/: README.md  benchmark_dp.py  benchmark_greedy.py
checkpoints/: pointer_epoch1.pt
coverage_planning/: __init__.py  dp_1side.py  dp_both.py  greedy.py  gsp.py  rmq.py  utils.py
coverage_planning.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: REPO_STRUCTURE.md
eval/: __init__.py  metrics.py
examples/: run_all.py  run_all_algorithms.py
scripts/: gen_dataset.py  mindistance.py  mintours.py  qc_dataset.py
tests/: __init__.py  conftest.py  prepare_dataset.py  test_complexity_sanity.py  test_dp.py  test_dp_1side.py  test_dp_both.py  test_dp_full.py  test_dp_full_plan_roundtrip.py  test_dpos.py  test_dpos_plan_roundtrip.py  test_featurize.py  test_featurize_perf.py  test_greedy.py  test_gs.py  test_gsp.py  test_heur_dp_1side.py  test_heur_dp_both.py  test_heur_greedy.py  test_heur_gsp.py  test_knife_edge_numeric.py  test_mask_contracts.py  test_mask_predicates.py  test_transition_core.py  test_transition_full.py  test_transition_one_side.py  test_utils.py  test_visualization_events.py  test_visualization_parity.py  test_visualization_render_boot.py
(+69 files in other folders)
